--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@
     .header-img {
         width: 40%;
         height: 800px;
-        background: url(/image/pngwing6.png);
+        background: url(/image/banner.png);
         background-repeat: no-repeat;
         background-size: contain;
         margin-top: 50px;
@@ -210,7 +210,7 @@
     .latest-deal {
 
 
-        background-image: url(/image/Rectangle9.png);
+        background-image: url(/image/latest-deals.png);
         margin: 130px 240px;
         text-align: center;
         padding: 100px;
