--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@
     .header-img {
         width: 40%;
         height: 800px;
-        background: url(/image/banner.png);
+        background: url(../image/banner.png);
         background-repeat: no-repeat;
         background-size: contain;
         margin-top: 50px;
